--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my_website2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://olsantiago.github.io/my_website2/",
+  "homepage": "https://olsantiago.github.io/website/",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
